<resources>
    <string name="app_name">SchoolAppliancesManager</string>
    <string name="broken">Broken</string>
    <string name="normal">Normal</string>
    <string name="borrow">Borrow</string>
    <string name="study">Study</string>
    <string name="lab">Lab</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="rooms">Room list</string>
    <string name="detail_used">Detail used list</string>
    <string name="appliances">Appliance list</string>
    <string name="exit">Exit</string>
    <string name="appliance_name">Appliance name:</string>
    <string name="status">Status:</string>
    <string name="room_name">Room name:</string>
    <string name="date_used">Date used:</string>
    <string name="class_name">Class name:</string>
    <string name="room_type">Room type:</string>
    <string name="add_image">Add image</string>
    <string name="add_room_fragment">Room Fragment</string>
    <string name="update_action">Update</string>
    <string name="add_action">Add</string>
    <string name="appliance">Appliance</string>
    <string name="room">Room</string>
    <string name="success">Success</string>
    <string name="delete_image">Delete image</string>
    <string name="room_name_same">Room name is the same</string>
    <string name="room_name_empty">Room name can\'t empty</string>
    <string name="appliance_name_empty" >Appliance name can\'t empty</string>
    <string name="class_name_empty" >Class name can\'t empty</string>
    <string name="open_camera">Open camera</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="mess_when_click_back_btn">Press again to exit</string>
    <string name="room_empty">Room is empty</string>
    <string name="appliance_empty">Appliance empty</string>
    <string name="appliance_borrowed">Appliance has been borrowed</string>
    <string name="save_success">Save success</string>
    <string name="group_nineteen">Group: 19th</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_complete">Delete Complete</string>
    <string name="appliance_statistical">Appliance statistical</string>
    <string name="date_return">Date return:</string>
    <string name="return_complete">Return appliance complete</string>
    <string name="detail_statistical">Appliances statistical by month</string>
    <string name="choose_month_statistical">Choose month statistical</string>
    <string name="quantity">Quantity:</string>
    <string name="statistical_be_empty">Statistical of appliances be empty</string>
    <string name="chart_title">Chart statistical of appliance</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="at">at</string>
</resources>