<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="appliance"
            type="com.example.schoolappliancesmanager.model.database.domain.Appliance" />

        <variable
            name="context"
            type="android.content.Context" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ViewSwitcher
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <FrameLayout
                android:id="@+id/add_task"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/doter"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple">

                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_add"
                        android:gravity="center"
                        android:padding="8dp"
                        android:scaleType="fitXY"
                        android:tint="?attr/blackWhite"
                        app:elevation="0dp"
                        app:rippleColor="@android:color/transparent"
                        app:srcCompat="@drawable/ic_add" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/add_image"
                        android:textColor="?attr/blackWhite"
                        android:textSize="18sp" />
                </LinearLayout>
            </FrameLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ViewSwitcher>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/appliance_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@={appliance.applianceName}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:entries="@array/statuses" />
        </LinearLayout>

        <Button
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/success"
            android:textAllCaps="false" />

    </LinearLayout>
</layout>