<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="detail_used"
            type="com.example.schoolappliancesmanager.model.database.domain.DetailUsed" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="16dp"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/appliance_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="16dp"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/date_used" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/birth_day"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:gravity="center|start"
                    android:inputType="date"
                    android:text="@={detail_used.dateUsedString}"
                    android:textColor="?attr/blackWhite"
                    android:textColorHighlight="?attr/greyColor" />

                <ImageButton
                    android:id="@+id/calendar_choose"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:tint="?attr/blackWhite"
                    app:backgroundTint="@android:color/transparent"
                    app:srcCompat="@drawable/ic_calendar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/class_name" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:backgroundTint="@android:color/transparent"
                android:inputType="text"
                android:text="@={detail_used.className}" />
        </LinearLayout>

        <Button
            android:id="@+id/borrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/borrow"
            android:textAllCaps="false" />
    </LinearLayout>
</layout>